QjackCtl - JACK Audio Connection Kit Qt GUI Interface 
-----------------------------------------------------

ChangeLog


0.9.6  2022-01-09  A Winter'22 Release.

- Dropped autotools (autoconf, automake, etc.) build system.

- Limit or mitigate fast auto-scrolling when moving Graph client
  nodes off the viewport.

- Whenever possible, adopt the previous named default preset,
  when starting the JACK-server on premises.

- Conditional fix to MacOSX and FreeBSD builds.



0.9.5  2021-10-05  An Autumn'21 Release.

- Streamlined Windows and MacOSX deliverables (by Alexis Murzeau).

- Korean (ko) translation added (by JungHee Lee).


0.9.4  2021-07-04  An Early-Summer'21 Release.

- All builds default to Qt6 (Qt >= 6.1) where available.

- CMake is now the official build system.


0.9.3  2021-05-11  A Spring'21 Release.

- Graph connection lines drop-shadow eye-candy has been optimized,
  improving a lot on moving highly-connected nodes, especially the
  ones with plenty of backward-curved connections.

- All packaging builds switching to CMake.

- Fixed default preset/aliases switching and reloading when entering 
  pure-client mode (ie. "Active" status).


0.9.2  2021-03-14  An End-of-Winter'21 Release.

- Clock source, Self-connect mode and Server synchronous mode 
  options are now always enabled on the Setup / Settings dialog,
  although only available or effective to jackd2.
  
- Graph Disconnect now applies to selected connections or nodes only.


0.9.1  2021-02-07  A Winter'21 Release.

- Graph Disconnect now applies to all selected ports and connections.

- Main window is now freely resizable, while keeping all the buttons 
  stretched to the same aspect ratio.

- Warning to confirm application close is now back in business when 
  functioning as client only (Active).

- Graph items are automatically raised when created or high-lighted 
  (incremental z-value).

- Add a little but straight horizontal line-gap to the Graph 
  connections.
