@@ -1,7 +1,7 @@
 // qjackctl.cpp
 //
 /****************************************************************************
-   Copyright (C) 2003-2021, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2003-2022, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -44,6 +44,10 @@ const WindowFlags WindowCloseButtonHint = WindowFlags(0x08000000);
 
 #ifndef CONFIG_PREFIX
 #define CONFIG_PREFIX	"/usr/local"
+#endif
+
+#ifndef CONFIG_BINDIR
+#define CONFIG_BINDIR	CONFIG_PREFIX "/bin"
 #endif
 
 #ifndef CONFIG_DATADIR
@@ -130,11 +134,13 @@ qjackctlApplication::qjackctlApplication ( int& argc, char **argv )
 		if (m_pMyTranslator->load(sLocName, sLocPath)) {
 			QApplication::installTranslator(m_pMyTranslator);
 		} else {
-#ifndef _WIN32
-			sLocPath = CONFIG_DATADIR "/qjackctl/translations";
-#else
-			sLocPath = QCoreApplication::applicationDirPath() + "/translations";
-#endif
+			sLocPath = QApplication::applicationDirPath();
+		#ifndef _WIN32
+			sLocPath.remove(CONFIG_BINDIR);
+			sLocPath.append(CONFIG_DATADIR "/qjackctl/translations");
+		#else
+			sLocPath.append("/translations");
+		#endif
 			if (m_pMyTranslator->load(sLocName, sLocPath)) {
 				QApplication::installTranslator(m_pMyTranslator);
 			} else {
